# routes/users.js
@@ -1,16 +1,14 @@
-const express = require('express');
+const express = require("express");
+const { authenticateToken } = require("../middleware/auth");
 const router = express.Router();
 
-const usersController = require('../controllers/users');
+const usersController = require("../controllers/users");
 
-router.get('/', usersController.getAll);
-
-router.get('/:id', usersController.getSingle);
-
-router.post('/', usersController.createUser);
-
-router.put('/:id', usersController.updateUser);
-
-router.delete('/:id', usersController.deleteUser);
+router.get("/", authenticateToken, usersController.getAll);
+router.get("/:id", authenticateToken, usersController.getSingle);
+router.post("/", usersController.createUser);
+router.post("/login", usersController.login);
+router.put("/:id", authenticateToken, usersController.updateUser);
+router.delete("/:id", authenticateToken, usersController.deleteUser);
 
 module.exports = router;
